--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,20 @@
       "type": "image/x-icon"
     },
     {
-      "src": "Calculator-icon192.png",
+      "src": "Calculator-icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "Calculator-icon512.png",
+      "src": "Calculator-icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./?source=pwa",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary",
+  "scope": "./"
 }
